--- a/app/globals.css
+++ b/app/globals.css
@@ -23,4 +23,16 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+::-webkit-scrollbar {
+  width: 4px;
+}
+::-webkit-scrollbar-track {
+    background: #fff;
+  }
+::-webkit-scrollbar-thumb {
+  background-color: #e9e9e9;
+  border-radius: 6px;
+  border: 1px solid #e9e9e9;
 }
