--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 :root {
   --background: #ffffff;
@@ -29,10 +30,29 @@ body {
   width: 4px;
 }
 ::-webkit-scrollbar-track {
-    background: #fff;
-  }
+  background: var(--color-background);
+}
 ::-webkit-scrollbar-thumb {
   background-color: #e9e9e9;
   border-radius: 6px;
-  border: 1px solid #e9e9e9;
+}
+
+.prose pre {
+  background-color: #e9e9e9;
+  overflow-x: auto;
+}
+.prose pre::-webkit-scrollbar {
+  height: 4px;
+}
+.prose pre::-webkit-scrollbar-track {
+  background: var(--color-background);
+}
+.prose pre::-webkit-scrollbar-thumb {
+  background: #e9e9e9;
+  border-radius: 6px;
+}
+/* Firefox */
+.prose pre {
+  scrollbar-width: thin;
+  scrollbar-color: #e9e9e9 var(--color-background);
 }
